--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 :root{
     --color_background: rgb(100, 141, 229);
 }
-* {
+
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     margin: 0;
 }
+
 body{
     background-color: var(--color_background);
     height: 100vh;
@@ -15,6 +19,9 @@ body{
 }
 .text-background{
     color: var(--color_background);
+}
+.bg-background{
+    background-color: var(--color_background);
 }
 .detail{
     height: 350px;
@@ -66,4 +73,15 @@ body{
     font-weight: 600;
     font-size: 15px;
     opacity: 0.7;
+}
+.container-canvas {
+    width: 100%;
+    height: calc(100% - 100px);
+    display: flex;
+    justify-content: center;
+}
+canvas {
+    display: block;
+    width: 95%;
+    height: 100%;
 }
