--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root{
-    --color_background: rgb(100, 141, 229);
+    --color_background_light: rgb(100, 141, 229);
+    --color_background_dark: rgb(59, 113, 147);
 }
 
 *,
@@ -8,20 +9,23 @@
     box-sizing: border-box;
     margin: 0;
 }
-
-body{
-    background-color: var(--color_background);
-    height: 100vh;
-    width: 100vw;
-}
 .container-fluid{
     padding: 30px 250px;
 }
 .text-background{
-    color: var(--color_background);
+    color: var(--color_background_light);
 }
-.bg-background{
-    background-color: var(--color_background);
+.text-background-dark{
+    color: rgb(12, 83, 128);
+}
+.body-background-dark{
+    background-color: rgb(15, 67, 100);
+}
+.bg-background-light{
+    background-color: var(--color_background_light);
+}
+.bg-background-dark{
+    background-color: var(--color_background_dark);
 }
 .detail{
     height: 350px;
@@ -39,7 +43,6 @@ body{
     transform: translateX(-5%);
 }
 #location{
-    color: rgb(22, 81, 120);
     font-size: 20px;
     font-weight: 450;
     margin: 0;
@@ -57,8 +60,11 @@ body{
 .daily_nav>div>div{
     height: 74%;
 }
-.today{
-    background-color: rgb(239, 243, 252);
+.today-light{
+    background-color: rgb(241, 245, 255);
+}
+.today-dark{
+    background-color: rgb(92, 149, 185);
 }
 .name-daily{
     font-weight: 700;
@@ -84,4 +90,10 @@ canvas {
     display: block;
     width: 95%;
     height: 100%;
+}
+.text-inherit{
+    color: inherit;
+}
+.bg-inherit{
+    background-color: inherit;
 }
